js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2a.0.kt
fun funA() = listOf(fun1()).joinToString()
fun funB() = listOf(fun2()).joinToString()
